--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "fdapaceShiny"]
+	path = fdapaceShiny
+	url = https://github.com/cpossinger/fdapaceshiny
+	shallow = true
+	registered = true
